Inclusão do teste register.test e ajuste no testK6
